Updated Index and Main Files, Added Assests into Files

--- a/index.html
+++ b/index.html
@@ -7,19 +7,37 @@
     <link href="main.css" rel="stylesheet"></link>
     <title>CARA CARA</title>
 </head>
+<style>
+    aside {
+        width: 10%;
+        padding-left: 15px;
+        margin-left: 15px;
+        float: left;
+    }
+</style>
 <body>
+    
     <header>
         <nav>
-            <a href=""></a>
-            <ul>
-                <li>Home</li>
-                <li>ABOUT</li>
-                <li>PRODUCTS</li>
-                <li>CONTACT</li>
-            </ul>
+            <a href="">HOME</a>
+            <a href="">PRODUCTS</a>
+            <a href="">ABOUT</a>
+            <a href="">CONTACT</a>
+            <h1>CARA <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/icons8-pottery-96.png" alt="Animated Pot"> CARA</h1>
+            <input>
+                <a href="">Cart(int)</a>
+            <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="Pottery Hand Wheel">                     
         </nav>
     </header>
-    <h1>Html Document</h1>
+
+<div class="OUR PRODUCTS">
+    <h2>MUNDO BOWLS   $48.00</h2>
+    <p>descripton goes here</p>
+</div>
 
 </body>
+<main></main>
+<footer>
+    <h1>CARA <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/icons8-pottery-96 (1).png" alt="Animated Pot"> CARA</h1>
+</footer>
 </html>
