Added HTML footer with Icons and Title, Updated CSS for Footer

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     padding: 10px;
    }
 
-  
+
 </style>
 </head>
 <body>
@@ -118,9 +118,16 @@
             <hr>
             <div class="products" style="justify-content: space-evenly;">
                 <div class="mundow_row">
-                    <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-7HuTGlUfQSo-unsplash.jpg" width="250" height="250" hspace="20"/>
-                    <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/oriento-maVIpNNtmlQ-unsplash.jpg" width="250" height="250" hspace="20"/>
-                    <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-bgIO-u4GEfI-unsplash.jpg" width="250" height="250" hspace="20"/>
+                    <img class= row src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-7HuTGlUfQSo-unsplash.jpg" width="250" height="250" hspace="20"/>
+                        <p> MUNDO BOWLS 
+                            <hr>
+                            Tincidunt praesent semper feugiat nibh
+                            sed. Vulputate mi sit amet mauris
+                            commodo quis imperdiet massa. Amet
+                            tellus cras adipiscing enim eu turpis
+                            egestas pretium aenean.</p></div>
+                    <img class= row src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/oriento-maVIpNNtmlQ-unsplash.jpg" width="250" height="250" hspace="20"/>
+                    <img class= row src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-bgIO-u4GEfI-unsplash.jpg" width="250" height="250" hspace="20"/>
                 </div> 
                 <div class="natureza_pots">
                     <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-3uwu5K0RtaE-unsplash.jpg" width="250" height="250" hspace="20"/>
@@ -158,6 +165,18 @@
 
 
 <footer>
-    <h1>CARA <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/icons8-pottery-96 (1).png" alt="Animated Pot"> CARA</h1>
+    <div class="footer-icons">
+        <div class="icons">
+            <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/icons8-youtube-96.png" alt= "youtube icon" width="50"/>
+            <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/icons8-facebook-96 (1).png" alt="facebook icon" width="50"/></div>
+        <div class="icons-2">
+            <a>CARA<img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/icons8-pottery-96 (1).png" alt="Animated Pot" width="50" height="50"> CARA</a></div>
+        <div class="icons-3">
+            <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/icons8-twitter-96.png" alt="twitter icon" width="50"/>
+            <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/icons8-instagram-96.png" alt= "insta icon" width="50"/>
+        </div>
+    </div>
 </footer>
 </html>
+    
+</div>
