Updated HTML and CSS Footer, Updated HTML and CSS Products

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    hr {
     border: black;
     height: 2px;
-    width: 91.5%;
+    width: 95%;
     background: black;
     font: bold;
     margin-top: 0rem;
@@ -37,7 +37,7 @@
     <header>
         <nav class="header-container">
             <ul class="nav-links">
-                <a href="">HOME</a> 
+                <a href="">HOME</a>
                 <a href="">PRODUCTS</a>
                 <a href="">ABOUT</a>
                 <a href="">CONTACT</a>
@@ -114,30 +114,144 @@
 
         <br>
         <section>
+            <br><br><br><br><br><br><br>
             <h2>OUR PRODUCTS</h2>
             <hr>
-            <div class="products" style="justify-content: space-evenly;">
+            <div class="products">
                 <div class="mundow_row">
-                    <img class= row src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-7HuTGlUfQSo-unsplash.jpg" width="250" height="250" hspace="20"/>
-                        <p> MUNDO BOWLS 
-                            <hr>
-                            Tincidunt praesent semper feugiat nibh
-                            sed. Vulputate mi sit amet mauris
-                            commodo quis imperdiet massa. Amet
-                            tellus cras adipiscing enim eu turpis
-                            egestas pretium aenean.</p></div>
-                    <img class= row src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/oriento-maVIpNNtmlQ-unsplash.jpg" width="250" height="250" hspace="20"/>
-                    <img class= row src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-bgIO-u4GEfI-unsplash.jpg" width="250" height="250" hspace="20"/>
+                    <div class="row">
+                        <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-7HuTGlUfQSo-unsplash.jpg" width="250" height="250" hspace="20"/>
+                                <p>MUNDO BOWLS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$59.00</p> 
+                                <hr>
+                                <span>Tincidunt praesent semper feugiat nibh
+                                sed. Vulputate mi sit amet mauris
+                                commodo quis imperdiet massa. Amet
+                                tellus cras adipiscing enim eu turpis
+                                egestas pretium aenean.<br><br></span>
+                            <div><form class="learn-more">
+                                <a href="">LEARN MORE</a> 
+                                <input type="submit" value="ADD TO CART">
+                                </form>
+                            </div>
+                            <br><br><br><br>
+                        <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-3uwu5K0RtaE-unsplash.jpg" width="250" height="250" hspace="20"/>
+                                <p> NATUREZA POTS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$59.00</p> 
+                                    <hr>
+                                    <span> Tincidunt praesent semper feugiat nibh
+                                    sed. Vulputate mi sit amet mauris
+                                    commodo quis imperdiet massa. Amet
+                                    tellus cras adipiscing enim eu turpis
+                                    egestas pretium aenean<br><br></span>
+                                <div><form class="learn-more">
+                                    <a href="">LEARN MORE</a>
+                                    <input type="submit" value="ADD TO CART">
+                                    </form>
+                                </div>
+                                <br><br><br><br>
+                        <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-YA2E3d7a9Wo-unsplash.jpg" width="250" height="250" hspace="20"/>
+                                <p> SERVICO PLATES &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$35.00</p> 
+                                    <hr>
+                                    <span> Tincidunt praesent semper feugiat nibh
+                                    sed. Vulputate mi sit amet mauris
+                                    commodo quis imperdiet massa. Amet
+                                    tellus cras adipiscing enim eu turpis
+                                    egestas pretium aenean<br><br></span></div>
+                                <div><form class="learn-more">
+                                    <a href="">LEARN MORE</a> 
+                                    <input type="submit" value="ADD TO CART">
+                                    </form>
+                                </div>
+                                <br><br><br><br>
                 </div> 
                 <div class="natureza_pots">
-                    <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-3uwu5K0RtaE-unsplash.jpg" width="250" height="250" hspace="20"/>
-                    <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/linh-le-a0rE64YJDA4-unsplash.jpg" width="250" height="250" hspace="20"/>
-                    <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-oiZAQvxTcYQ-unsplash.jpg" width="250" height="250" hspace="20"/>
+                    <div class="row">
+                        <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/oriento-maVIpNNtmlQ-unsplash.jpg" width="250" height="250" hspace="20"/>
+                            <p> NATUREZA VASE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$37.00</p> 
+                                    <hr>
+                                    <span> Tincidunt praesent semper feugiat nibh
+                                    sed. Vulputate mi sit amet mauris
+                                    commodo quis imperdiet massa. Amet
+                                    tellus cras adipiscing enim eu turpis
+                                    egestas pretium aenean<br><br></span>
+                                <div><form class="learn-more">
+                                    <a href="">LEARN MORE</a> 
+                                    <input type="submit" value="ADD TO CART">
+                                    </form>
+                                </div>
+                                <br><br><br><br>
+                        <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/linh-le-a0rE64YJDA4-unsplash.jpg" width="250" height="250" hspace="20"/>
+                            <p> PEDRA VASE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$31.00</p> 
+                                    <hr>
+                                    <span> Tincidunt praesent semper feugiat nibh
+                                    sed. Vulputate mi sit amet mauris
+                                    commodo quis imperdiet massa. Amet
+                                    tellus cras adipiscing enim eu turpis
+                                    egestas pretium aenean<br><br></span>
+                                <div><form class="learn-more">
+                                    <a href="">LEARN MORE</a> 
+                                    <input type="submit" value="ADD TO CART">
+                                    </form>
+                                </div>
+                                <br><br><br><br>
+                        <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/oriento-l0ah3UBLppo-unsplash.jpg" width="250" height="250" hspace="20"/>
+                            <p> CAMPEAO VASE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$37.00</p> 
+                                    <hr>
+                                    <span> Tincidunt praesent semper feugiat nibh
+                                    sed. Vulputate mi sit amet mauris
+                                    commodo quis imperdiet massa. Amet
+                                    tellus cras adipiscing enim eu turpis
+                                    egestas pretium aenean<br><br></span></div>
+                                <div><form class="learn-more">
+                                    <a href="">LEARN MORE</a> 
+                                    <input type="submit" value="ADD TO CART">
+                                    </form>
+                                </div>
+                                <br><br><br><br>
                 </div>
                 <div class="serivco_plates">
-                    <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-YA2E3d7a9Wo-unsplash.jpg" width="250" height="250" hspace="20"/>
-                    <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/oriento-l0ah3UBLppo-unsplash.jpg" width="250" height="250" hspace="20"/>
-                    <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-SITGdvztUdg-unsplash.jpg" width="250" height="250" hspace="20"/>
+                    <div class="row">
+                        <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-bgIO-u4GEfI-unsplash.jpg" width="250" height="250" hspace="20"/>
+                            <p> FEIRA BOWLS  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$29.00</p> 
+                                    <hr>
+                                    <span> Tincidunt praesent semper feugiat nibh
+                                    sed. Vulputate mi sit amet mauris
+                                    commodo quis imperdiet massa. Amet
+                                    tellus cras adipiscing enim eu turpis
+                                    egestas pretium aenean<br><br></span>
+                                <div><form class="learn-more">
+                                    <a href="">LEARN MORE</a> 
+                                    <input type="submit" value="ADD TO CART">
+                                    </form>
+                                </div>
+                                <br><br><br><br>
+                        <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-oiZAQvxTcYQ-unsplash.jpg" width="250" height="250" hspace="20"/>
+                            <p> VAJA POTS  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$57.00</p> 
+                                    <hr>
+                                    <span> Tincidunt praesent semper feugiat nibh
+                                    sed. Vulputate mi sit amet mauris
+                                    commodo quis imperdiet massa. Amet
+                                    tellus cras adipiscing enim eu turpis
+                                    egestas pretium aenean<br><br></span>
+                                <div><form class="learn-more">
+                                    <a href="">LEARN MORE</a> 
+                                    <input type="submit" value="ADD TO CART">
+                                    </form>
+                                </div>
+                                <br><br><br><br>
+                        <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/tom-crew-SITGdvztUdg-unsplash.jpg" width="250" height="250" hspace="20"/>
+                            <p> TROCA BOWLS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$25.00</p> 
+                                    <hr>
+                                    <span> Tincidunt praesent semper feugiat nibh
+                                    sed. Vulputate mi sit amet mauris
+                                    commodo quis imperdiet massa. Amet
+                                    tellus cras adipiscing enim eu turpis
+                                    egestas pretium aenean<br><br></span></div>
+                                <div><form class="learn-more">
+                                    <a href="">LEARN MORE</a> 
+                                    <input type="submit" value="ADD TO CART">
+                                    </form>
+                                </div>
+                                <br><br><br><br>
                 </div>
             </div>
         </section>
@@ -168,13 +282,20 @@
     <div class="footer-icons">
         <div class="icons">
             <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/icons8-youtube-96.png" alt= "youtube icon" width="50"/>
-            <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/icons8-facebook-96 (1).png" alt="facebook icon" width="50"/></div>
-        <div class="icons-2">
-            <a>CARA<img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/icons8-pottery-96 (1).png" alt="Animated Pot" width="50" height="50"> CARA</a></div>
-        <div class="icons-3">
+            <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/icons8-facebook-96 (1).png" alt="facebook icon" width="50"/>
+            <span>
+                <p>Pretium nibh ipsum consequat nisl vel pretium.</p></span></div>
+        <div class="icons-2" style="display: table; justify-content: baseline;">
+            <a>CARA<img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/icons8-pottery-96 (1).png" alt="Animated Pot" width="50" height="50"> CARA</a></div>   
+        <div class="icons-3"> 
             <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/icons8-twitter-96.png" alt="twitter icon" width="50"/>
             <img src="assets/eCommerceWebsiteAssets_GN_Starter-main/eCommerceWebsiteAssets_GN_Starter-main/icons8-instagram-96.png" alt= "insta icon" width="50"/>
+            <span>  
+            <p>Amet tellus cras adipiscing enim eu turpis. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Copyright 2015-2020</p></span>  
         </div>
+        <!-- <div class="copyright">
+            <span>Copyright 2015-2020</span>
+        </div> -->
     </div>
 </footer>
 </html>
